--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tsconfig/svelte": "^5.0.2",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20.12.13",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.3",
@@ -27,6 +28,8 @@
   },
   "dependencies": {
     "concurrently": "^8.2.2",
-    "http-server": "^14.1.1"
+    "dompurify": "^3.1.6",
+    "http-server": "^14.1.1",
+    "marked": "^13.0.2"
   }
 }
