--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "concurrently": "^8.2.2",
     "dompurify": "^3.1.6",
+    "fuse.js": "^7.0.0",
     "http-server": "^14.1.1",
     "marked": "^13.0.2"
   }
